# rusty-bank

./: Cargo.toml  README.md
src/: account_summary.rs  client.rs  config.rs  lib.rs  main.rs  processor.rs  reader.rs  store.rs  transaction.rs  transaction_record.rs  writer.rs
tests/: integration_test.rs
