[package]
name = "rusty-bank"
version = "0.1.0"
authors = ["Oliver Gavin"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.14"
rust_decimal = "1.23.1"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
hamcrest2 = "0.3.0"
itertools = "0.10.3"
mockall = "0.11.1"
mockall_double = "0.3.0"
predicates = "2.1.1"
rust_decimal_macros = "1.23.1"
tempfile = "3.3.0"
test-case = "2.0.2"
testing_logger = "0.1.1"
